sandbox/deploy/k8s-kata/controller.yaml
# SPDX-FileCopyrightText: Advanced Micro Devices, Inc.
# SPDX-License-Identifier: Apache-2.0

---
kind: Namespace
apiVersion: v1
metadata:
  name: agent-sandbox-system

---

kind: Service
apiVersion: v1
metadata:
  name: agent-sandbox-controller
  namespace: agent-sandbox-system
  labels:
    app: agent-sandbox-controller
spec:
  selector:
    app: agent-sandbox-controller
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: agent-sandbox-controller
  namespace: agent-sandbox-system
  labels:
    app: agent-sandbox-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-sandbox-controller
  template:
    metadata:
      labels:
        app: agent-sandbox-controller
    spec:
      serviceAccountName: agent-sandbox-controller
      tolerations:
        - operator: Exists
      containers:
      - name: agent-sandbox-controller
        image: ko://sigs.k8s.io/agent-sandbox/cmd/agent-sandbox-controller # placeholder value, replaced by deployment scripts
        args:
        - --leader-elect=true
